--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -156,7 +156,6 @@ h4 {
 }
 
 a {
-  display: block;
   color: inherit;
   text-decoration: none;
 }
@@ -383,7 +382,10 @@ header .header-left ul {
     flex-direction: column;
   }
 }
-header .header-left ul a {
+header .header-left ul li {
+  line-height: 100%;
+}
+header .header-left ul li a {
   line-height: 13px;
 }
 header input {
@@ -416,8 +418,13 @@ header input::placeholder {
 }
 #page-description .container {
   padding: 0;
-  margin-top: 25px;
+  margin-top: 50px;
   align-items: start;
+}
+@media (max-width: 1239px) {
+  #page-description .container {
+    margin-top: 25px;
+  }
 }
 #page-description .counter {
   margin-top: 16px;
