--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -43,7 +43,11 @@ header {
       padding-bottom: 2px;
 
       list-style-type: none;
-      a { line-height: 13px; }
+      li {
+        line-height: 100%;
+        a { line-height: 13px; }
+      }
+      
     }
   }
   
