--- a/src/css/index.css
+++ b/src/css/index.css
@@ -459,7 +459,7 @@ header input::placeholder {
 }
 
 #page-pricing {
-  margin-top: 100px;
+  padding-top: 100px;
 }
 #page-pricing .card-container {
   display: flex;
