--- a/src/scss/page-pricing.scss
+++ b/src/scss/page-pricing.scss
@@ -1,7 +1,7 @@
 @use 'media.scss' as media;
 
 #page-pricing {
-  margin-top: 100px;
+  padding-top: 100px;
 
   .card-container {
     display: flex;
