--- a/src/css/index.css
+++ b/src/css/index.css
@@ -495,12 +495,12 @@ header input::placeholder {
   }
 }
 #page-pricing .card h3 {
-  margin-top: 24px;
+  margin-top: 25px;
   margin-bottom: 200px;
 }
 #page-pricing .card .price {
   display: flex;
-  align-content: flex-start;
+  justify-content: center;
   margin-bottom: 40px;
 }
 #page-pricing .card .price span:nth-child(1) {
