--- a/src/css/index.css
+++ b/src/css/index.css
@@ -464,7 +464,8 @@ header input::placeholder {
 #page-pricing .card-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 50px;
+  column-gap: 50px;
+  row-gap: 30px;
   margin-top: 45px;
   margin-bottom: 43px;
 }
@@ -478,17 +479,13 @@ header input::placeholder {
   flex-direction: column;
   align-items: center;
   width: 366px;
+  max-width: calc(100vw - 40px);
   height: 615px;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
   border-radius: 1rem;
   background-position: center;
   background-size: cover;
-}
-@media (max-width: 1239px) {
-  #page-pricing .card {
-    width: calc(100vw - 40px);
-  }
 }
 #page-pricing .card:nth-child(1) {
   background-image: url("../images/subscribe_1.png");
