--- a/src/scss/page-pricing.scss
+++ b/src/scss/page-pricing.scss
@@ -6,7 +6,8 @@
   .card-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    column-gap: 50px;
+    row-gap: 30px;
     margin-top: 45px;
     margin-bottom: 43px;
     @include media.mobile { margin-bottom: 19px; }
@@ -17,7 +18,7 @@
     flex-direction: column;
     align-items: center;
     width: 366px;
-    @include media.mobile { width: calc(100vw - 40px); }
+    max-width: calc(100vw - 40px);
 
     height: 615px;
     padding-right: 1.5rem;
