--- a/src/css/index.css
+++ b/src/css/index.css
@@ -479,13 +479,17 @@ header input::placeholder {
   flex-direction: column;
   align-items: center;
   width: 366px;
-  max-width: calc(100vw - 40px);
   height: 615px;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
   border-radius: 1rem;
   background-position: center;
   background-size: cover;
+}
+@media (max-width: 1239px) {
+  #page-pricing .card {
+    width: calc(100vw - 40px);
+  }
 }
 #page-pricing .card:nth-child(1) {
   background-image: url("../images/subscribe_1.png");
@@ -632,10 +636,21 @@ footer .urls-container {
   }
 }
 footer .column {
-  flex-grow: 1;
+  flex-basis: 270px;
 }
-footer .column h4 {
+footer .column h2 {
   margin-bottom: 15px;
+}
+footer .column ul {
+  list-style-type: none;
+}
+footer .column ul li {
+  padding-top: 2px;
+  padding-bottom: 3px;
+  line-height: 24px;
+}
+footer .column ul li a {
+  line-height: 19px;
 }
 footer .column a {
   display: block;
