--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -22,16 +22,7 @@ footer {
 
     h2 { margin-bottom: 15px; }
 
-    ul {
-      list-style-type: none;
-      
-      li {
-        padding-top: 2px;
-        padding-bottom: 3px;
-
-        line-height: 24px;
-      }
-    }
+    ul { list-style-type: none; }
 
     .icons {
       display: flex;
