--- a/src/css/index.css
+++ b/src/css/index.css
@@ -642,6 +642,11 @@ footer .urls-container {
 footer .column {
   width: 270px;
 }
+@media (max-width: 1239px) {
+  footer .column {
+    width: 100%;
+  }
+}
 footer .column h2 {
   margin-bottom: 15px;
 }
