--- a/src/css/index.css
+++ b/src/css/index.css
@@ -621,12 +621,10 @@ header input::placeholder {
 }
 
 footer {
+  width: 100%;
   padding-top: calc(3rem + 2px);
   padding-bottom: 2rem;
   background: linear-gradient(89.75deg, #5328a1 32.83%, #95390c 81.56%);
-}
-footer.container {
-  max-width: 100%;
 }
 footer .urls-container {
   display: flex;
@@ -640,12 +638,8 @@ footer .urls-container {
   }
 }
 footer .column {
-  width: 270px;
-}
-@media (max-width: 1239px) {
-  footer .column {
-    width: 100%;
-  }
+  min-width: 270px;
+  flex-grow: 1;
 }
 footer .column h2 {
   margin-bottom: 15px;
@@ -669,7 +663,7 @@ footer hr {
   margin-top: 72px;
   margin-bottom: 40px;
   height: 2px;
-  width: calc(100vw - 20px);
+  width: 100%;
 }
 footer .end-container {
   display: flex;
