--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,7 +1,11 @@
 @use 'media.scss' as media;
 
 footer {
-  &.container { max-width: 100%; }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
   padding-top: calc(3rem + 2px);
   padding-bottom: 2rem;
 
