--- a/src/scss/page-description.scss
+++ b/src/scss/page-description.scss
@@ -3,7 +3,7 @@
 #page-description {
   &.container { max-width: 100%; }
   padding-top: 200px;
-  @include media.mobile { padding-top: 250px; }
+  @include media.mobile { .mobile-50 { height: 50px; } }
   padding-bottom: 200px;
 
   background-image: url('../images/banner.png');
