--- a/src/scss/page-app.scss
+++ b/src/scss/page-app.scss
@@ -1,7 +1,7 @@
 @use 'media.scss' as media;
 
 #page-app {
-  margin-top: 100px;
+  padding-top: 100px;
   margin-bottom: 100px;
 
   .content-container {
@@ -20,10 +20,12 @@
 
   p {
     max-width: 600px;
-    margin-top: 16px;
+    &:first { margin-top: 16px; }
   }
 
   .btn {
+    display: inline-block;
+
     margin-top: 16px;
     padding-top: 16px;
     padding-right: 40px;
