--- a/src/css/index.css
+++ b/src/css/index.css
@@ -616,16 +616,16 @@ header input::placeholder {
     gap: 16px;
   }
 }
+#page-app .content-container p {
+  max-width: 600px;
+}
+#page-app .content-container p:first-child {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
 #page-app .content-container img {
   width: 333px;
   height: 278px;
-}
-#page-app p {
-  max-width: 600px;
-}
-#page-app p:first {
-  margin-top: 16px;
-  margin-bottom: 16px;
 }
 #page-app .btn {
   display: inline-block;
