--- a/src/css/index.css
+++ b/src/css/index.css
@@ -600,20 +600,14 @@ header input::placeholder {
 }
 #page-app .content-container {
   display: flex;
-  gap: 144px;
+  column-gap: 144px;
   width: 100%;
   margin-top: 48px;
 }
 @media (max-width: 1239px) {
   #page-app .content-container {
-    align-items: center;
-  }
-}
-@media (max-width: 1239px) {
-  #page-app .content-container {
     flex-direction: column-reverse;
-    flex-wrap: wrap;
-    gap: 16px;
+    align-items: center;
   }
 }
 #page-app .content-container p {
