--- a/src/css/index.css
+++ b/src/css/index.css
@@ -534,7 +534,7 @@ header input::placeholder {
 }
 
 #page-news {
-  margin-top: 100px;
+  padding-top: 100px;
 }
 #page-news .news-container {
   display: flex;
@@ -585,6 +585,7 @@ header input::placeholder {
   height: 19px;
 }
 #page-news .btn {
+  display: inline-block;
   margin-top: 48px;
   padding-top: 16px;
   padding-right: 30px;
