--- a/src/scss/page-news.scss
+++ b/src/scss/page-news.scss
@@ -1,7 +1,7 @@
 @use 'media.scss' as media;
 
 #page-news {
-  margin-top: 100px;
+  padding-top: 100px;
 
   .news-container {
     display: flex;
@@ -53,6 +53,8 @@
   }
 
   .btn {
+    display: inline-block;
+
     margin-top: 48px;
     padding-top: 16px;
     padding-right: 30px;
