--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,10 +1,10 @@
-@use 'defaults.scss';
-@use 'atomic.scss';
-@use 'colors.scss';
-
-@use 'header.scss';
-@use 'page-description.scss';
-@use 'page-pricing.scss';
-@use 'page-news.scss';
-@use 'page-app.scss';
-@use 'footer.scss';
+@use "defaults.scss";
+@use "atomic.scss";
+@use "colors.scss";
+// advanced
+@use "header.scss";
+@use "page-description.scss";
+@use "page-pricing.scss";
+@use "page-news.scss";
+@use "page-app.scss";
+@use "footer.scss";
