--- a/src/scss/page-description.scss
+++ b/src/scss/page-description.scss
@@ -1,4 +1,4 @@
-@use 'media.scss' as media;
+@use "media.scss" as media;
 
 #page-description {
   &.container { max-width: 100%; }
@@ -6,7 +6,7 @@
   @include media.mobile { .mobile-50 { height: 50px; } }
   padding-bottom: 200px;
 
-  background-image: url('../images/banner.png');
+  background-image: url("../images/banner.png");
   background-position: center;
   background-size: cover;
 
